common/gotosocial/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotosocial
  namespace: gotosocial
  labels:
    app.kubernetes.io/name: gotosocial
    app.kubernetes.io/instance: gotosocial
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gotosocial
      app.kubernetes.io/instance: gotosocial
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotosocial
        app.kubernetes.io/instance: gotosocial
    spec:
      containers:
        - name: gotosocial
          image: superseriousbusiness/gotosocial:0.21.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /gotosocial/storage
            - name: cache
              mountPath: /gotosocial/.cache
          startupProbe:
            httpGet:
              path: /readyz
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 1200  # 1200 * 10s = 200 minutes for startup/migrations
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /livez
              port: http
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotosocial-data
        - name: cache
          emptyDir: {}
        - name: litestream-config
          secret:
            secretName: litestream-secrets
